--- a/public/Kanbas/Courses/Grades/styles.css
+++ b/public/Kanbas/Courses/Grades/styles.css
@@ -1,15 +1,20 @@
 .kanbas-sidebar {
     background-color: black;
-    width: 120px;
+    width: 80px; /* As it's between 75 and 85px */
     color: white; /* Default color for text inside the sidebar */
+    text-align: center;
 }
 
 .kanbas-sidebar .nav-link {
     background-color: black;
     color: white;
+    margin: 7px 0;  /* Margin between 5 and 10px */
+    padding: 7px;  /* Padding between 5 and 10px */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin: 5px 0;
-    padding: 5px 10px;
+    flex-direction: column;  /* Stack items vertically */
 }
 
 .kanbas-sidebar .nav-link:hover {
@@ -48,6 +53,15 @@
 .sidebar .nav-link.active {
     color: black; /* Text color for the active link */
 }
+
+.kanbas-sidebar .fas {
+    margin-bottom: 5px;  /* Space below the icon */
+}
+
+.kanbas-sidebar .nav-link span {
+    font-size: 12px;  /* Adjust as needed */
+}
+
 
 .gray-background {
     background-color: lightgray;
@@ -99,7 +113,7 @@
 }
 
 .table thead th {
-    background-color: #f5f5f5;  /* Background color for header */
+    background-color: white;  /* Background color for header */
     vertical-align: middle;  /* Center content vertically */
     text-align: center;  /* Center content horizontally */
 }
@@ -127,6 +141,13 @@
     margin-right: 10px; /* Adds space to the right of the button */
 }
 
+.search-input {
+    background-image: url('search.png');
+    background-position: left 10px center;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 30px; /* Adjust based on the icon's size */
+}
 
 
 
