--- a/public/Kanbas/Dashboard/styles.css
+++ b/public/Kanbas/Dashboard/styles.css
@@ -1,19 +1,20 @@
-* {
-    box-sizing: border-box;
-}
-
 .kanbas-sidebar {
     background-color: black;
-    width: 120px;
+    width: 80px; /* As it's between 75 and 85px */
     color: white; /* Default color for text inside the sidebar */
+    text-align: center;
 }
 
 .kanbas-sidebar .nav-link {
     background-color: black;
     color: white;
+    margin: 7px 0;  /* Margin between 5 and 10px */
+    padding: 7px;  /* Padding between 5 and 10px */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin: 5px 0;
-    padding: 5px 10px;
+    flex-direction: column;  /* Stack items vertically */
 }
 
 .kanbas-sidebar .nav-link:hover {
@@ -25,6 +26,42 @@
     background-color: white;
     color: red; /* Color for active link text */
 }
+
+.nav-link .fas {
+    color: red;
+}
+
+.nav-link .fa-user {
+    color: red;
+}
+
+.row.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+}
+.row.no-gutters > .col {
+    padding-right: 0;
+    padding-left: 0;
+
+}
+
+/* Styles for the Course Navigation sidebar */
+.sidebar .nav-link {
+    color: red;
+}
+
+.sidebar .nav-link.active {
+    color: black; /* Text color for the active link */
+}
+
+.kanbas-sidebar .fas {
+    margin-bottom: 5px;  /* Space below the icon */
+}
+
+.kanbas-sidebar .nav-link span {
+    font-size: 12px;  /* Adjust as needed */
+}
+
 
 .nav-link .fas {
     color: red;
